WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288165
REGRESSSION(
288610@main
) Auto-pip results in black pip window
https://bugs.webkit.org/show_bug.cgi?id=288165
Summary
REGRESSSION(288610@main) Auto-pip results in black pip window
Jer Noble
Reported
2025-02-20 17:00:06 PST
REGRESSSION(
288610@main
) Auto-pip results in black pip window
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2025-02-20 17:00:08 PST
<
rdar://problem/145099773
>
EWS
Comment 2
2025-02-21 09:04:26 PST
Committed
290799@main
(5d50b8fe6063): <
https://commits.webkit.org/290799@main
> Reviewed commits have been landed. Closing PR #41028 and removing active labels.
EWS
Comment 3
2025-02-21 16:11:02 PST
Committed
289651.153@safari-7621-branch
(87545194012c): <
https://commits.webkit.org/289651.153@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2650 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug