REGRESSSION(288610@main) Auto-pip results in black pip window rdar://145099773 https://bugs.webkit.org/show_bug.cgi?id=288165

Reviewed by Eric Carlson.

In the 288610@main, the state machine for some re-entrant code which previously
ensured that video content was moved into fullscreen (on the way to pip) during
an auto-pip transition was cleaned up, which had the unfortunate side effect of
breaking the auto-pip transition.

Restore the behavior of moving video content into fullscreen during an auto-pip
transition, but do so in a way that is much more straightforward, and doesn't
depend upon the doSetup() state machine.

* Source/WebCore/platform/ios/VideoPresentationInterfaceAVKitLegacy.h:
* Source/WebCore/platform/ios/VideoPresentationInterfaceAVKitLegacy.mm:
(WebCore::VideoPresentationInterfaceAVKitLegacy::setupPlayerViewController):
(WebCore::VideoPresentationInterfaceAVKitLegacy::transferVideoViewToFullscreen):
* Source/WebCore/platform/ios/VideoPresentationInterfaceIOS.h:
(WebCore::VideoPresentationInterfaceIOS::transferVideoViewToFullscreen):
* Source/WebCore/platform/ios/VideoPresentationInterfaceIOS.mm:
(WebCore::VideoPresentationInterfaceIOS::willStartPictureInPicture):

Canonical link: https://commits.webkit.org/290799@main